# Bezier-Curve-CoppeliaSim

./: README.md
controller/: CMakeLists.txt  package.xml
controller/src/: controller_node.cpp
manipulator_msgs/: CMakeLists.txt  package.xml
manipulator_msgs/msg/: DoF2.msg  DoF4.msg  DoF5.msg
scene/: manipulator.ttt  simple_ball.ttt
